// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reports:verify integration tests > Isolamento com REPORTS_DIR_OVERRIDE e README_PATH_OVERRIDE > should NOT modify the custom README in --dry-run mode with overrides > custom-readme-unchanged-dry-run 1`] = `
"
#### Estrutura de Relatórios e Logs (Exemplo Real)

Ao executar \`npm run token-audit:dry-run\` ou \`npm run token-audit:report\`, a pasta \`./reports\` é populada com a seguinte estrutura:

\`\`\`text
reports/
└── placeholder.json
\`\`\`
"
`;

exports[`reports:verify integration tests > Isolamento com REPORTS_DIR_OVERRIDE e README_PATH_OVERRIDE > should include override information in GitHub Step Summary > summary-with-overrides 1`] = `
"### 📊 Relatório de Verificação de Estrutura

⚠️ **Status:** Aviso (Divergência Detectada)
📝 **Motivo do Exit Code:** Divergências encontradas, mas o modo de falha está desativado.

#### 🔍 Detalhes das Divergências

#### Missing Files (1)
- \`placeholder.json\` (Documentado no README mas não encontrado)
#### ⚙️ Configuração Customizada (Overrides)
- 📁 **Diretório de Relatórios:** \`custom-reports-isolated\` (via \`REPORTS_DIR_OVERRIDE\`)
- 📖 **Caminho do README:** \`CUSTOM-README-isolated.md\` (via \`README_PATH_OVERRIDE\`)


"
`;

exports[`reports:verify integration tests > Isolamento com REPORTS_DIR_OVERRIDE e README_PATH_OVERRIDE > should write updated content ONLY to the custom README via overrides > custom-readme-updated 1`] = `
"
#### Estrutura de Relatórios e Logs (Exemplo Real)

Ao executar \`npm run token-audit:dry-run\` ou \`npm run token-audit:report\`, a pasta \`./reports\` é populada com a seguinte estrutura:

\`\`\`text
reports/
└── token-audit-dry-run-2026-05-30T10-00-00.json    # [2026-05-30 10 00:00] Log histórico
\`\`\`
"
`;

exports[`reports:verify integration tests > should update README and generate divergences.md in --update mode 1`] = `
"
#### Estrutura de Relatórios e Logs (Exemplo Real)

Ao executar \`npm run token-audit:dry-run\` ou \`npm run token-audit:report\`, a pasta \`./reports\` é populada com a seguinte estrutura:

\`\`\`text
reports/
├── compliance-history.json    # Histórico de progresso
├── token-audit-dry-run-2026-05-30T10-00-00.json    # [2026-05-30 10 00:00] Log histórico
└── token-audit.json           # Logs técnicos brutos (mais recente)
\`\`\`
"
`;

exports[`reports:verify integration tests > should update README and generate divergences.md in --update mode 2`] = `
"# Resumo de Atualização dos Relatórios

Data: [NORMALIZED]

## Mudanças na Árvore

### Anterior
\`\`\`text
reports/
├── compliance-history.json    # Histórico de progresso
└── token-audit.json           # Logs técnicos brutos (mais recente)
\`\`\`

### Novo
\`\`\`text
reports/
├── compliance-history.json    # Histórico de progresso
├── token-audit-dry-run-2026-05-30T10-00-00.json    # [2026-05-30 10 00:00] Log histórico
└── token-audit.json           # Logs técnicos brutos (mais recente)
\`\`\`
"
`;

exports[`reports:verify integration tests should update README and generate divergences.md in --update mode 1`] = `
"
#### Estrutura de Relatórios e Logs (Exemplo Real)

Ao executar \`npm run token-audit:dry-run\` ou \`npm run token-audit:report\`, a pasta \`./reports\` é populada com a seguinte estrutura:

\`\`\`text
reports/
├── compliance-history.json    # Histórico de progresso
├── token-audit-dry-run-2026-05-30T10-00-00.json    # [2026-05-30 10 00:00] Log histórico
└── token-audit.json           # Logs técnicos brutos (mais recente)
\`\`\`
"
`;

exports[`reports:verify integration tests should update README and generate divergences.md in --update mode 2`] = `
"# Resumo de Atualização dos Relatórios

Data: [NORMALIZED]

## Mudanças na Árvore

### Anterior
\`\`\`text
reports/
├── compliance-history.json    # Histórico de progresso
└── token-audit.json           # Logs técnicos brutos (mais recente)
\`\`\`

### Novo
\`\`\`text
reports/
├── compliance-history.json    # Histórico de progresso
├── token-audit-dry-run-2026-05-30T10-00-00.json    # [2026-05-30 10 00:00] Log histórico
└── token-audit.json           # Logs técnicos brutos (mais recente)
\`\`\`
"
`;

exports[`reports:verify integration tests Isolamento com REPORTS_DIR_OVERRIDE e README_PATH_OVERRIDE should write updated content ONLY to the custom README via overrides: custom-readme-updated 1`] = `
"
#### Estrutura de Relatórios e Logs (Exemplo Real)

Ao executar \`npm run token-audit:dry-run\` ou \`npm run token-audit:report\`, a pasta \`./reports\` é populada com a seguinte estrutura:

\`\`\`text
reports/
└── token-audit-dry-run-2026-05-30T10-00-00.json    # [2026-05-30 10 00:00] Log histórico
\`\`\`
"
`;

exports[`reports:verify integration tests Isolamento com REPORTS_DIR_OVERRIDE e README_PATH_OVERRIDE should NOT modify the custom README in --dry-run mode with overrides: custom-readme-unchanged-dry-run 1`] = `
"
#### Estrutura de Relatórios e Logs (Exemplo Real)

Ao executar \`npm run token-audit:dry-run\` ou \`npm run token-audit:report\`, a pasta \`./reports\` é populada com a seguinte estrutura:

\`\`\`text
reports/
└── placeholder.json
\`\`\`
"
`;

exports[`reports:verify integration tests Isolamento com REPORTS_DIR_OVERRIDE e README_PATH_OVERRIDE should include override information in GitHub Step Summary: summary-with-overrides 1`] = `
"### 📊 Relatório de Verificação de Estrutura

⚠️ **Status:** Aviso (Divergência Detectada)
📝 **Motivo do Exit Code:** Divergências encontradas, mas o modo de falha está desativado.

#### 🔍 Detalhes das Divergências

#### Missing Files (1)
- \`placeholder.json\` (Documentado no README mas não encontrado)
#### ⚙️ Configuração Customizada (Overrides)
- 📁 **Diretório de Relatórios:** \`custom-reports-isolated\` (via \`REPORTS_DIR_OVERRIDE\`)
- 📖 **Caminho do README:** \`CUSTOM-README-isolated.md\` (via \`README_PATH_OVERRIDE\`)


"
`;

exports[`reports:verify integration tests Matriz de Combinações de Flags com Overrides deve validar a combinação: Padrão (sem flags) [] 1`] = `
{
  "args": [],
  "combination": "Padrão (sem flags)",
  "exitCode": 0,
  "readmeUpdated": false,
  "summary": 
"### 📊 Relatório de Verificação de Estrutura

⚠️ **Status:** Aviso (Divergência Detectada)
📝 **Motivo do Exit Code:** Divergências encontradas, mas o modo de falha está desativado.

#### 🔍 Detalhes das Divergências

#### Missing Files (1)
- \`expected-file.json\` (Documentado no README mas não encontrado)
#### Unexpected Files (1)
- \`extra-file.json\` (Presente em \`./reports\` mas não documentado)

> **Dica:** Rode \`npm run reports:verify -- --update\` localmente para sincronizar.
#### ⚙️ Configuração Customizada (Overrides)
- 📁 **Diretório de Relatórios:** \`matrix-reports-test\` (via \`REPORTS_DIR_OVERRIDE\`)
- 📖 **Caminho do README:** \`MATRIX-README-test.md\` (via \`README_PATH_OVERRIDE\`)


"
,
}
`;

exports[`reports:verify integration tests Matriz de Combinações de Flags com Overrides deve validar a combinação: Apenas Falha [--fail-on-divergence] 1`] = `
{
  "args": [
    "--fail-on-divergence",
  ],
  "combination": "Apenas Falha",
  "exitCode": 1,
  "readmeUpdated": false,
  "summary": 
"### 📊 Relatório de Verificação de Estrutura

❌ **Status:** Falha (Divergência Detectada)
📝 **Motivo do Exit Code:** Divergências encontradas com \`--fail-on-divergence\` ativo.

#### 🔍 Detalhes das Divergências

#### Missing Files (1)
- \`expected-file.json\` (Documentado no README mas não encontrado)
#### Unexpected Files (1)
- \`extra-file.json\` (Presente em \`./reports\` mas não documentado)

> **Dica:** Rode \`npm run reports:verify -- --update\` localmente para sincronizar.
#### ⚙️ Configuração Customizada (Overrides)
- 📁 **Diretório de Relatórios:** \`matrix-reports-test\` (via \`REPORTS_DIR_OVERRIDE\`)
- 📖 **Caminho do README:** \`MATRIX-README-test.md\` (via \`README_PATH_OVERRIDE\`)


"
,
}
`;

exports[`reports:verify integration tests Matriz de Combinações de Flags com Overrides deve validar a combinação: Apenas Atualização [--update] 1`] = `
{
  "args": [
    "--update",
  ],
  "combination": "Apenas Atualização",
  "exitCode": 0,
  "readmeUpdated": true,
  "summary": 
"### 📊 Relatório de Verificação de Estrutura

🔄 **Status:** Sincronizado
📝 **Motivo do Exit Code:** README atualizado automaticamente.

#### ⚙️ Configuração Customizada (Overrides)
- 📁 **Diretório de Relatórios:** \`matrix-reports-test\` (via \`REPORTS_DIR_OVERRIDE\`)
- 📖 **Caminho do README:** \`MATRIX-README-test.md\` (via \`README_PATH_OVERRIDE\`)


"
,
}
`;

exports[`reports:verify integration tests Matriz de Combinações de Flags com Overrides deve validar a combinação: Atualização em Dry Run [--update --dry-run] 1`] = `
{
  "args": [
    "--update",
    "--dry-run",
  ],
  "combination": "Atualização em Dry Run",
  "exitCode": 0,
  "readmeUpdated": false,
  "summary": 
"### 📊 Relatório de Verificação de Estrutura

⚠️ **Status:** Simulação (Dry Run)
📝 **Motivo do Exit Code:** Modo Dry Run ativo; nenhuma alteração persistida.

#### ⚙️ Configuração Customizada (Overrides)
- 📁 **Diretório de Relatórios:** \`matrix-reports-test\` (via \`REPORTS_DIR_OVERRIDE\`)
- 📖 **Caminho do README:** \`MATRIX-README-test.md\` (via \`README_PATH_OVERRIDE\`)


"
,
}
`;

exports[`reports:verify integration tests Matriz de Combinações de Flags com Overrides deve validar a combinação: Atualização com Falha (ignorado) [--update --fail-on-divergence] 1`] = `
{
  "args": [
    "--update",
    "--fail-on-divergence",
  ],
  "combination": "Atualização com Falha (ignorado)",
  "exitCode": 0,
  "readmeUpdated": true,
  "summary": 
"### 📊 Relatório de Verificação de Estrutura

🔄 **Status:** Sincronizado
📝 **Motivo do Exit Code:** README atualizado automaticamente.

#### ⚙️ Configuração Customizada (Overrides)
- 📁 **Diretório de Relatórios:** \`matrix-reports-test\` (via \`REPORTS_DIR_OVERRIDE\`)
- 📖 **Caminho do README:** \`MATRIX-README-test.md\` (via \`README_PATH_OVERRIDE\`)


"
,
}
`;

exports[`reports:verify integration tests Matriz de Combinações de Flags com Overrides deve validar a combinação: Dry Run com Falha [--update --dry-run --fail-on-divergence] 1`] = `
{
  "args": [
    "--update",
    "--dry-run",
    "--fail-on-divergence",
  ],
  "combination": "Dry Run com Falha",
  "exitCode": 0,
  "readmeUpdated": false,
  "summary": 
"### 📊 Relatório de Verificação de Estrutura

⚠️ **Status:** Simulação (Dry Run)
📝 **Motivo do Exit Code:** Modo Dry Run ativo; nenhuma alteração persistida.

#### ⚙️ Configuração Customizada (Overrides)
- 📁 **Diretório de Relatórios:** \`matrix-reports-test\` (via \`REPORTS_DIR_OVERRIDE\`)
- 📖 **Caminho do README:** \`MATRIX-README-test.md\` (via \`README_PATH_OVERRIDE\`)


"
,
}
`;

exports[`reports:verify integration tests Matriz de Combinações de Flags com Overrides deve validar Update Simples COM divergência [--update] 1`] = `
{
  "args": [
    "--update",
  ],
  "divergence": true,
  "exitCode": 0,
  "readmeUpdated": true,
  "scenario": "Update Simples",
  "summary": 
"### 📊 Relatório de Verificação de Estrutura

🔄 **Status:** Sincronizado
📝 **Motivo do Exit Code:** README atualizado automaticamente.

#### ⚙️ Configuração Customizada (Overrides)
- 📁 **Diretório de Relatórios:** \`matrix-reports-test\` (via \`REPORTS_DIR_OVERRIDE\`)
- 📖 **Caminho do README:** \`MATRIX-README-test.md\` (via \`README_PATH_OVERRIDE\`)


"
,
}
`;

exports[`reports:verify integration tests Matriz de Combinações de Flags com Overrides deve validar Update Simples SEM divergência [--update] 1`] = `
{
  "args": [
    "--update",
  ],
  "divergence": false,
  "exitCode": 0,
  "readmeUpdated": true,
  "scenario": "Update Simples",
  "summary": 
"### 📊 Relatório de Verificação de Estrutura

✅ **Status:** Sucesso (Já Sincronizado)
📝 **Motivo do Exit Code:** Nenhuma divergência detectada; README mantido.

#### ⚙️ Configuração Customizada (Overrides)
- 📁 **Diretório de Relatórios:** \`matrix-reports-test\` (via \`REPORTS_DIR_OVERRIDE\`)
- 📖 **Caminho do README:** \`MATRIX-README-test.md\` (via \`README_PATH_OVERRIDE\`)


"
,
}
`;

exports[`reports:verify integration tests Matriz de Combinações de Flags com Overrides deve validar Update com Dry Run COM divergência [--update --dry-run] 1`] = `
{
  "args": [
    "--update",
    "--dry-run",
  ],
  "divergence": true,
  "exitCode": 0,
  "readmeUpdated": false,
  "scenario": "Update com Dry Run",
  "summary": 
"### 📊 Relatório de Verificação de Estrutura

⚠️ **Status:** Simulação (Dry Run)
📝 **Motivo do Exit Code:** Modo Dry Run ativo; nenhuma alteração persistida.

#### ⚙️ Configuração Customizada (Overrides)
- 📁 **Diretório de Relatórios:** \`matrix-reports-test\` (via \`REPORTS_DIR_OVERRIDE\`)
- 📖 **Caminho do README:** \`MATRIX-README-test.md\` (via \`README_PATH_OVERRIDE\`)


"
,
}
`;

exports[`reports:verify integration tests Matriz de Combinações de Flags com Overrides deve validar Update com Dry Run SEM divergência [--update --dry-run] 1`] = `
{
  "args": [
    "--update",
    "--dry-run",
  ],
  "divergence": false,
  "exitCode": 0,
  "readmeUpdated": true,
  "scenario": "Update com Dry Run",
  "summary": 
"### 📊 Relatório de Verificação de Estrutura

⚠️ **Status:** Simulação (Dry Run)
📝 **Motivo do Exit Code:** Modo Dry Run ativo; nenhuma alteração persistida.

#### ⚙️ Configuração Customizada (Overrides)
- 📁 **Diretório de Relatórios:** \`matrix-reports-test\` (via \`REPORTS_DIR_OVERRIDE\`)
- 📖 **Caminho do README:** \`MATRIX-README-test.md\` (via \`README_PATH_OVERRIDE\`)


"
,
}
`;

exports[`reports:verify integration tests Matriz de Combinações de Flags com Overrides deve validar Update com Fail on Divergence COM divergência [--update --fail-on-divergence] 1`] = `
{
  "args": [
    "--update",
    "--fail-on-divergence",
  ],
  "divergence": true,
  "exitCode": 0,
  "readmeUpdated": true,
  "scenario": "Update com Fail on Divergence",
  "summary": 
"### 📊 Relatório de Verificação de Estrutura

🔄 **Status:** Sincronizado
📝 **Motivo do Exit Code:** README atualizado automaticamente.

#### ⚙️ Configuração Customizada (Overrides)
- 📁 **Diretório de Relatórios:** \`matrix-reports-test\` (via \`REPORTS_DIR_OVERRIDE\`)
- 📖 **Caminho do README:** \`MATRIX-README-test.md\` (via \`README_PATH_OVERRIDE\`)


"
,
}
`;

exports[`reports:verify integration tests Matriz de Combinações de Flags com Overrides deve validar Update com Fail on Divergence SEM divergência [--update --fail-on-divergence] 1`] = `
{
  "args": [
    "--update",
    "--fail-on-divergence",
  ],
  "divergence": false,
  "exitCode": 0,
  "readmeUpdated": true,
  "scenario": "Update com Fail on Divergence",
  "summary": 
"### 📊 Relatório de Verificação de Estrutura

✅ **Status:** Sucesso (Já Sincronizado)
📝 **Motivo do Exit Code:** Nenhuma divergência detectada; README mantido.

#### ⚙️ Configuração Customizada (Overrides)
- 📁 **Diretório de Relatórios:** \`matrix-reports-test\` (via \`REPORTS_DIR_OVERRIDE\`)
- 📖 **Caminho do README:** \`MATRIX-README-test.md\` (via \`README_PATH_OVERRIDE\`)


"
,
}
`;

exports[`reports:verify integration tests Matriz de Combinações de Flags com Overrides deve validar Update com Dry Run e Fail on Divergence COM divergência [--update --dry-run --fail-on-divergence] 1`] = `
{
  "args": [
    "--update",
    "--dry-run",
    "--fail-on-divergence",
  ],
  "divergence": true,
  "exitCode": 0,
  "readmeUpdated": false,
  "scenario": "Update com Dry Run e Fail on Divergence",
  "summary": 
"### 📊 Relatório de Verificação de Estrutura

⚠️ **Status:** Simulação (Dry Run)
📝 **Motivo do Exit Code:** Modo Dry Run ativo; nenhuma alteração persistida.

#### ⚙️ Configuração Customizada (Overrides)
- 📁 **Diretório de Relatórios:** \`matrix-reports-test\` (via \`REPORTS_DIR_OVERRIDE\`)
- 📖 **Caminho do README:** \`MATRIX-README-test.md\` (via \`README_PATH_OVERRIDE\`)


"
,
}
`;

exports[`reports:verify integration tests Matriz de Combinações de Flags com Overrides deve validar Update com Dry Run e Fail on Divergence SEM divergência [--update --dry-run --fail-on-divergence] 1`] = `
{
  "args": [
    "--update",
    "--dry-run",
    "--fail-on-divergence",
  ],
  "divergence": false,
  "exitCode": 0,
  "readmeUpdated": true,
  "scenario": "Update com Dry Run e Fail on Divergence",
  "summary": 
"### 📊 Relatório de Verificação de Estrutura

⚠️ **Status:** Simulação (Dry Run)
📝 **Motivo do Exit Code:** Modo Dry Run ativo; nenhuma alteração persistida.

#### ⚙️ Configuração Customizada (Overrides)
- 📁 **Diretório de Relatórios:** \`matrix-reports-test\` (via \`REPORTS_DIR_OVERRIDE\`)
- 📖 **Caminho do README:** \`MATRIX-README-test.md\` (via \`README_PATH_OVERRIDE\`)


"
,
}
`;

exports[`reports:verify integration tests Matriz de Combinações de Flags com Overrides deve validar modo Verificação Padrão (sem --update) COM divergência 1`] = `
"### 📊 Relatório de Verificação de Estrutura

⚠️ **Status:** Aviso (Divergência Detectada)
📝 **Motivo do Exit Code:** Divergências encontradas, mas o modo de falha está desativado.

#### 🔍 Detalhes das Divergências

#### Missing Files (1)
- \`expected-file.json\` (Documentado no README mas não encontrado)
#### Unexpected Files (1)
- \`extra-file.json\` (Presente em \`./reports\` mas não documentado)

> **Dica:** Rode \`npm run reports:verify -- --update\` localmente para sincronizar.
#### ⚙️ Configuração Customizada (Overrides)
- 📁 **Diretório de Relatórios:** \`matrix-reports-test\` (via \`REPORTS_DIR_OVERRIDE\`)
- 📖 **Caminho do README:** \`MATRIX-README-test.md\` (via \`README_PATH_OVERRIDE\`)


"
`;

exports[`reports:verify integration tests Matriz de Combinações de Flags com Overrides deve validar modo Verificação com Falha (sem --update) COM divergência 1`] = `
"### 📊 Relatório de Verificação de Estrutura

❌ **Status:** Falha (Divergência Detectada)
📝 **Motivo do Exit Code:** Divergências encontradas com \`--fail-on-divergence\` ativo.

#### 🔍 Detalhes das Divergências

#### Missing Files (1)
- \`expected-file.json\` (Documentado no README mas não encontrado)
#### Unexpected Files (1)
- \`extra-file.json\` (Presente em \`./reports\` mas não documentado)

> **Dica:** Rode \`npm run reports:verify -- --update\` localmente para sincronizar.
#### ⚙️ Configuração Customizada (Overrides)
- 📁 **Diretório de Relatórios:** \`matrix-reports-test\` (via \`REPORTS_DIR_OVERRIDE\`)
- 📖 **Caminho do README:** \`MATRIX-README-test.md\` (via \`README_PATH_OVERRIDE\`)


"
`;
